画面端からプレイヤーの車がはみ出さないよう修正 操作方法の説明を追加 不要なコメントアウト削除 利用OSS、画像ソースのリンク作成

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>CentOS DMZ Web</title>
+        <title>tmlib car</title>
 
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/main.css" rel="stylesheet">
@@ -27,7 +27,9 @@
                             <li class="active"><a id="reloadIframe" href="#">Reload game</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="//github.com/windyakin/Honoka/releases">Honoka</a></li>
+                            <li><a href="http://phi-jp.github.io/tmlib.js/">tmlib</a></li>
+                            <li><a href="http://honokak.osaka">Honoka</a></li>
+                            <li><a href="http://iconhoihoi.oops.jp">ICON HOIHOI</a></li>
                         </ul>
                     </div>
                 </div>
@@ -39,9 +41,17 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-sm-10 col-sm-offset-1">
                     <div class="text-center">
-                        <iframe id="game" src="./car.html"; height="400px"; width="400px";></iframe>
+                        <iframe id="game" class="text-center" src="./car.html"; height="400px"; width="400px";></iframe>
                     </div>
                 </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-sm-10 col-sm-offset-1">
+                    <p class="text-center">移動→上下左右　crash後再スタート→Enter</p>
+                </div>
+            </div>
+
         </div>
 
         <script src="js/jquery.min.js"></script>
